       than one attribute of an object. This removes the ties between the
       indexes ID and the attribute name to be indexed. 

     - Integration of reStructuredText (reST) and the ZReST product
       by Richard Jones.  See doc/RESTRUCTUREDTEXT.txt for details.

     - Objects locked through WebDAV are now marked with a lock icon
       inside the ZMI.

    Bugs Fixed

     - Collector #771: ZCatalog failed to index DTML Document if the name
       of a catalog metadata was identical with the name of an acquired
       object.

     - Collector #686: intSets no longer lose their values.

     - Collector #685: Improved documentation explaining how, where and 
       why security assertions should be placed in:
       lib/python/Products/PythonScripts/README.txt
       lib/python/Products/PythonScripts/module_access_examples.py

     - The ZEO unit tests and wo_pcgi.py didn't run on Windows if the path 
       to the python executable included a space.

     - Some calls to os.system('chmod') has been replaced with the more 
       portable os.chmod() call, to make install work properly on Windows.


  Zope 2.6.1 beta 2
    
    Features added

      - DateTime objects now have a tzoffset() method that returns the objects
        timezones offset from GMT in seconds.

    Bugs Fixed

      - Collector #740: DateTime now handles positive numerical timezones correcly.

      - Collector #763: There was no error when you had a sendmail-tag
        without specifying a mailhost or smpthost. Also added a missing import.

      - Work around potential BTrees key enumeration bugs in Transience
        package by checking explicitly for error cases.

      - Collector #736: ZPublisher now allows marshalling tags to contain
        a '-'. This is the first step towards a fix for Collector #737

      - Collector #714: CopySupport's manage_clone now calls 
        manage_afterClone in the saem way that manage_pasteObjects does.
